# ngircd

./: .clang_complete  .cvsignore  .editorconfig  .gitignore  .mailmap  .travis.yml  AUTHORS  AUTHORS.md  ChangeLog  INSTALL  INSTALL.md  Makefile.am  NEWS  README  README.md  acconfig.h  autogen.sh  config.guess  configure.in  configure.ng
.github/workflows/: ci.yml
MacOSX/: Makefile.am
MacOSX/ngircd.pbproj/: Makefile.am  alex.pbxuser  project.pbxproj
contrib/: Dockerfile  Makefile.am  README  README.md  de.barton.ngircd.metainfo.xml  de.barton.ngircd.plist  ngindent  ngindent.sh  ngircd-fail2ban.conf  ngircd-redhat.init  ngircd.logcheck  ngircd.service  ngircd.sh  ngircd.socket  ngircd.spec  nglog.sh  platformtest.sh  systrace.policy
contrib/Anope/: 0001-Revert-Removed-ngircd.patch  0002-ngircd-whitespace-fixes.patch  0003-Update-ngIRCd-protocol-module-for-current-Anope-1.9.patch  0004-ngircd-Do-PING-PONG-on-server-burst-to-sync.patch  0005-ngircd-always-prefix-modes-in-CHANINFO-with.patch  0006-ngircd-support-user-mode-R-and-channel-mode-R.patch  0007-ngircd-Fix-handling-of-JOIN-commands.patch  0008-ngircd-Allow-setting-modes-by-clients-on-burst.patch  0009-ngircd-Update-protocol-module-for-current-Anope.patch  0010-ngircd-Add-ProtongIRCd.patch  0011-ngircd-Update-protocol-module-for-current-Anope.patch  0012-ngircd-Channel-mode-r-is-supported-now.patch  0013-ngircd-Update-copyright-notice.patch  0014-ngircd-set-unset-GLINE-s-on-AKILL-commands.patch  0015-ngircd-ngIRCd-supports-channel-mode-e-now.patch  0016-ngircd-support-SQUERY-command.patch  Makefile.am  README
contrib/Debian/: .gitignore  Makefile.am  changelog  control  copyright  ngircd.default  ngircd.init  ngircd.pam  ngircd.postinst  rules  watch
contrib/MacOSX/: .gitignore  Makefile.am  config.h  de.barton.ngircd.plist.tmpl  postinstall.sh  preinstall.sh
contrib/MacOSX/ngIRCd.pmdoc/: 01ngircd-contents.xml  01ngircd.xml  02de-contents.xml  02de.xml  Makefile.am  index.xml
contrib/MacOSX/ngIRCd.xcode/: project.pbxproj
contrib/MacOSX/ngIRCd.xcodeproj/: .gitignore  Makefile.am  project.pbxproj
debian/: Makefile.am  changelog  control  copyright  ngircd.default  ngircd.init  ngircd.postinst  rules
doc/: .gitignore  Bopm.txt  CC-Speed.txt  CVS.txt  Capabilities.txt  Commands.txt  Container.md  Contributing.txt  FAQ.md  FAQ.txt  GIT.txt  HowToRelease.txt  Makefile.am  Modes.txt  PAM.txt  Platforms.txt  Protocol.txt  QuickStart.md  README-AUX.txt  README-BeOS.txt  README-Interix.txt  RFC.txt  SSL.md  SSL.txt  Services.txt  Zeroconf.txt  sample-ngircd.conf  sample-ngircd.conf.tmpl
doc/de/: CVS.txt  FAQ.txt  INSTALL  Makefile.am  Protocol.txt  README  README-AUX.txt  README-BeOS.txt  RFC.txt  sample-ngircd.conf
doc/en/: INSTALL  Makefile.am  README  sample-ngircd.conf
doc/src/: Doxyfile  Makefile.am  footer.inc.html  header.inc.html  ngircd-doc.css
man/: .cvsignore  .gitignore  Makefile.am  ngircd.8  ngircd.8.nroff  ngircd.8.tmpl  ngircd.conf.5  ngircd.conf.5.nroff  ngircd.conf.5.tmpl
src/: .gitignore  Doxyfile  Makefile.am
src/ipaddr/: Makefile.am  Makefile.ng  ng_ipaddr.c  ng_ipaddr.h
src/ngircd/: .cvsignore  .gitignore  Makefile.am  Makefile.ng  array.c  array.h  channel.c  channel.h  class.c  class.h  client-cap.c  client-cap.h  client.c  client.h  conf-ssl.h  conf.c  conf.h  conn-encoding.c  conn-encoding.h  conn-func.c  conn-func.h  conn-ssl.c  conn-ssl.h  conn-zip.c  conn-zip.h  conn.c  conn.h  defines.h  global.h  hash.c  hash.h  io.c  io.h  irc-cap.c  irc-cap.h  irc-channel.c  irc-channel.h  irc-encoding.c  irc-encoding.h  irc-info.c  (+47 more)
src/portab/: .cvsignore  .gitignore  Makefile.am  Makefile.ng  ansi2knr.c  exp.h  imp.h  portab.h  portabtest.c  splint.h  strdup.c  strlcpy.c  strndup.c  strtok_r.c  vsnprintf.c  waitpid.c
src/testsuite/: .cvsignore  .gitignore  Makefile.am  Makefile.ng  README  channel-test.e  check-idle.e  cleanup-server3  connect-ssl-cert1-test.e  connect-ssl-cert2-test.e  connect-test.e  functions.inc  getpid.sh  invite-test.e  join-test.e  kick-test.e  message-test.e  misc-test.e  mode-test.e  ngircd-test.conf  ngircd-test1.conf  ngircd-test2.conf  ngircd-test3.conf  opless-channel-test.e  prep-server3  reload-server.sh  reload-server3  server-link-test.e  server-login-test.e  start-server.sh  start-server1  start-server2  start-server3  stop-server.sh  stop-server1  stop-server2  stop-server3  stress-A.e  stress-B.e  stress-server.sh  (+7 more)
src/testsuite/ssl/: cert-my-first-domain-tld.pem  cert-my-second-domain-tld.pem  dhparams-my-first-domain-tld.pem  dhparams-my-second-domain-tld.pem  key-my-first-domain-tld.pem  key-my-second-domain-tld.pem
src/tool/: Makefile.am  Makefile.ng  tool.c  tool.h
